--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,10 @@ click==7.1.2
 dominate==2.6.0
 Flask==1.1.4
 Flask-Bootstrap==3.3.7.1
+Flask-Ext==0.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
-Flask-Migrate==2.2.1
+Flask-Migrate==3.1.0
 Flask-Script==2.0.6
 Flask-SimpleMDE==0.3.0
 Flask-SQLAlchemy==2.5.1
@@ -23,8 +24,5 @@ python-editor==1.0.4
 six==1.16.0
 SQLAlchemy==1.4.23
 visitor==0.1.3
-Werkzeug==0.16.0
+Werkzeug==0.16.1
 WTForms==2.3.3
-email-validator==1.1.3
-requests==2.26.0
-psycopg2==2.8.4
